# lbgpsdo

./: README.md  pyproject.toml
lbgpsdo/: __init__.py  cli.py  lbgpsdo.py
lbgpsdo/rules/: 99-lbgpsdo.rules
